[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
postcard = { version = "1.0", features = ["alloc"] }
rand_xoshiro = "0.6"
serde = "1.0"
serde_derive = "1.0"
triple_arena = { path = "../triple_arena", features = ["expose_internal_utils", "serde_support"] }
triple_arena_render = { path = "../triple_arena_render" }
