[package]
name = "triple_arena"
# change the dependency used by `triple_arena_render` when the minor version or higher is changed
version = "0.13.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/triple_arena"
documentation = "https://docs.rs/triple_arena"
description = "Regular, Chain, Surjection, and Ordered Arenas supporting non-Clone types, deletion, and more"
keywords = ["arena", "generation", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]
rust-version = "1.70"

[dependencies]
#recasting = { path = "../../recasting", default-features = false, features = ["alloc"] }
recasting = { version = "0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
ron = "0.8"

[features]
default = []
std = ["recasting/std"]
serde_support = ["serde"]
# this is only for testing purposes
expose_internal_utils = []
