[package]
name = "triple_arena_render"
version = "0.2.0" # note: make equal to `triple_arena` version
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/triple_arena"
documentation = "https://docs.rs/triple_arena"
description = "Rendered visualization for `triple_arena`"
keywords = ["arena", "graph", "render", "visualize"]
categories = ["rendering::data-formats", "graphics", "visualization"]

[dependencies]
triple_arena = { path = "../triple_arena", version = "0.2.0" }
